--- a/src/main/resources/static/app/index.html
+++ b/src/main/resources/static/app/index.html
@@ -16,6 +16,7 @@
     <script src="/app/js/service/rest-service.js"></script>
     <script src="/app/js/service/environment-service.js"></script>
     <script src="/app/js/service/host-service.js"></script>
+    <script src="/app/js/service/container-service.js"></script>
 </head>
 <body>
     <dev>
