--- a/src/main/resources/static/app/index.html
+++ b/src/main/resources/static/app/index.html
@@ -17,6 +17,7 @@
     <script src="/app/js/service/environment-service.js"></script>
     <script src="/app/js/service/host-service.js"></script>
     <script src="/app/js/service/container-service.js"></script>
+    <script src="/app/js/service/image-service.js"></script>
 </head>
 <body>
     <dev>
