--- a/src/main/resources/static/app/index.html
+++ b/src/main/resources/static/app/index.html
@@ -13,6 +13,7 @@
     <script src="/app/js/controller/environment-controller.js"></script>
     <script src="/app/js/controller/environments-controller.js"></script>
     <script src="/app/js/controller/host-controller.js"></script>
+    <script src="/app/js/controller/logs-controller.js"></script>
     <script src="/app/js/service/rest-service.js"></script>
     <script src="/app/js/service/environment-service.js"></script>
     <script src="/app/js/service/host-service.js"></script>
