--- a/src/main/resources/static/app/index.html
+++ b/src/main/resources/static/app/index.html
@@ -21,8 +21,8 @@
     <script src="/app/js/service/image-service.js"></script>
 </head>
 <body>
-    <dev>
+    <div>
         <ng-view></ng-view>
-    </dev>
+    </div>
 </body>
 </html>
