--- a/src/main/resources/static/app/index.html
+++ b/src/main/resources/static/app/index.html
@@ -4,6 +4,7 @@
     <script src="/angular/angular.js"></script>
     <script src="/angular/angular-route.js"></script>
     <script src="/js/jquery.js"></script>
+    <script src="/js/underscore-min.js"></script>
     <script src="/bootstrap/js/bootstrap.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/page.css">
     <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.css">
